# nuttx-apps

./: Application.mk  CMakeLists.txt  Make.defs  Makefile
audioutils/alsa-lib/: CMakeLists.txt  Kconfig  Makefile  alsactl.c  aplay.c  arecord.c  bits_convert.c  bits_convert.h  channels_map.c  channels_map.h  error.c  pcm.c  pcm_dmix.c  pcm_hw.c  pcm_local.h  pcm_params.c  pcm_softvol.c
audioutils/speexdsp/: CMakeLists.txt  Kconfig
audioutils/tinycompress/: CMakeLists.txt  Kconfig  Make.defs  Makefile
benchmarks/cachespeed/: Makefile  cachespeed_main.c
benchmarks/coremark/: CMakeLists.txt
benchmarks/osperf/: osperf.c
benchmarks/ramspeed/: Kconfig  ramspeed_main.c
benchmarks/whetstone/: Kconfig  whetstone.c
builtin/: CMakeLists.txt  Makefile  builtin_list.c  exec_builtin.c
builtin/registry/: .gitignore
canutils/candump/: candump.c
cmake/: nuttx_add_aidl.cmake  nuttx_add_dfx.cmake  nuttx_add_erpc.cmake  nuttx_add_jidl.cmake  nuttx_add_makefile.cmake  nuttx_add_prebuilt.cmake  nuttx_add_rust.cmake  nuttx_apps_symtab.cmake  nuttx_wasm_interface.cmake
crypto/controlse/: controlse_main.cxx
crypto/mbedtls/: CMakeLists.txt  Kconfig  Makefile
crypto/tinycrypt/: CMakeLists.txt  Makefile
examples/: README.md
examples/adc/: adc_main.c
examples/adxl372_test/: Kconfig
examples/battery/: Kconfig
examples/buttons/: buttons_main.c
examples/calib_udelay/: calib_udelay_main.c
examples/camera/: camera_bkgd.c
examples/capture/: cap.h  cap_main.c
examples/chrono/: chrono_main.c
examples/dhcpd/: CMakeLists.txt  Kconfig  Makefile  dhcpd_daemon.c
examples/elf/: CMakeLists.txt  Make.defs  Makefile
examples/fb/: fb_main.c
examples/foc/: foc_fixed16_thr.c  foc_float_thr.c  foc_motor_b16.h  foc_motor_f32.h
examples/gpio/: gpio_main.c
examples/hello/: CMakeLists.txt  Kconfig  Makefile
examples/hidkbd/: Kconfig
examples/i2schar/: i2schar.h  i2schar_main.c
examples/igmp/: Kconfig
examples/ivshmem_test/: CMakeLists.txt  Kconfig  Make.defs  Makefile  ivshmem_main.c
examples/lp503x/: lp503x_main.c
examples/lvgldemo/: Kconfig  lvgldemo.c
examples/memory_pressure/: CMakeLists.txt  Kconfig  Make.defs  Makefile  pressure_main.c
examples/netpkt/: netpkt_main.c
examples/noteprintf/: noteprintf_main.c
examples/nxscope/: nxscope_main.c
examples/nxterm/: nxterm_main.c
examples/pipe/: interlock_test.c
examples/pty_test/: pty_test.c
examples/pwfb/: pwfb_events.c
examples/pwlines/: pwlines_events.c
examples/rpmsgchar/: CMakeLists.txt  Kconfig  Make.defs  Makefile  rpmsgchar_main.c
examples/rpmsgsocket/: Android.bp  rpsock_client.c  rpsock_server.c
examples/rust/slint/: Cargo.toml  Make.defs  Makefile
examples/sotest/main/: CMakeLists.txt  sotest_main.c
examples/spi/: Kconfig  Make.defs  Makefile  spi_main.c
examples/tlpi/: Makefile
examples/touchscreen/: tc_main.c
examples/udp/: CMakeLists.txt
examples/uio/: Android.bp  Kconfig  Make.defs  Makefile  uio_test.c
examples/usrsocktest/: usrsocktest_remote_disconnect.c
examples/vsock/: CMakeLists.txt  Kconfig  Make.defs  Makefile  vsock_main.c
examples/watchdog/: Kconfig  watchdog.h  watchdog_main.c
examples/watched/: watched.c
examples/watcher/: watcher_main.c
examples/xbc_test/: xbc_test_main.c
fsutils/flashtool/: Kconfig
fsutils/mkgpt/: mkgpt.c
graphics/ft80x/: ft80x_touch.c
graphics/input/: CMakeLists.txt  Kconfig  Makefile
graphics/libyuv/: CMakeLists.txt
graphics/lvctl/: CMakeLists.txt  Kconfig  Make.defs  Makefile  lvctl_main.c
graphics/lvgl/: CMakeLists.txt  Make.defs  Makefile
import/: Make.defs
include/graphics/: input_gen.h
include/netutils/: dhcp6c.h  dhcpc.h  dhcpd.h  ftpd.h  icmp_ping.h  icmpv6_ping.h  netlib.h  ptpd.h
include/nshlib/: nshlib.h
include/system/: nxplayer.h
include/wireless/: wapi.h
interpreters/python/: .gitignore
interpreters/quickjs/: CMakeLists.txt  Kconfig  Makefile
interpreters/wamr/: CMakeLists.txt  Kconfig  Makefile  Module.mk  Toolchain.defs  wamr_unit_test.cc
logging/nxscope/: nxscope_chan.c  nxscope_iser.c
math/ruy/: CMakeLists.txt
mlearning/cmsis/: CMakeLists.txt
mlearning/cmsis-nn/: CMakeLists.txt
mlearning/nnlib-hifi4/: .gitignore  CMakeLists.txt
mlearning/tflite-micro/: CMakeLists.txt  Kconfig  Makefile
netutils/codecs/: md5.c
netutils/dhcp6c/: dhcp6c.c
netutils/dhcpc/: dhcpc.c
netutils/dhcpd/: dhcpd.c
netutils/ftpd/: ftpd.c
netutils/iperf/: Kconfig  iperf.c  iperf.h  iperf_main.c
netutils/libwebsockets/: CMakeLists.txt  Kconfig  Makefile  lws_config.h
netutils/mqttc/: CMakeLists.txt  Makefile
netutils/mqttc5/: .gitignore
netutils/netinit/: Kconfig  netinit.c
netutils/netlib/: CMakeLists.txt  Makefile  netlib_checkifconnectivity.c  netlib_checkipconnectivity.c  netlib_ethtool.c  netlib_getifstatistics.c  netlib_iptables.c  netlib_setarp.c  netlib_setifstatus.c
netutils/nng/: .gitignore  CMakeLists.txt  Kconfig  Makefile
netutils/ntpclient/: ntpclient.c
netutils/paho_mqtt/: .gitignore  CMakeLists.txt  Kconfig  Makefile
netutils/ping/: Kconfig  icmp_ping.c  icmpv6_ping.c
netutils/ptpd/: Kconfig  ptpd.c  ptpv2.h
netutils/rexec/: Android.bp  rexec.c
netutils/rexecd/: rexecd.c
netutils/rpmsg_tun/: Android.bp  CMakeLists.txt  Kconfig  Make.defs  Makefile  config.mk  init.rpmsg_tun_client.rc  init.rpmsg_tun_server.rc  rpmsg_tun_client.c  rpmsg_tun_server.c  rpmsg_tun_util.c  rpmsg_tun_util.h
netutils/telnetd/: telnetd_daemon.c
nshlib/: CMakeLists.txt  Kconfig  Makefile  nsh.h  nsh_builtin.c  nsh_codeccmd.c  nsh_command.c  nsh_console.c  nsh_console.h  nsh_ddcmd.c  nsh_fileapps.c  nsh_fscmds.c  nsh_fsutils.c  nsh_mmcmds.c  nsh_mntcmds.c  nsh_netcmds.c  nsh_parse.c  nsh_proccmds.c  nsh_script.c  nsh_syscmds.c  nsh_timcmds.c
system/acpica/: CMakeLists.txt  Kconfig  Make.defs  Makefile
system/adb/: Kconfig
system/cfgdata/: cfgdata_main.c
system/composite/: CMakeLists.txt
system/coredump/: Kconfig  coredump.c
tools/: CMakeLists.txt  Rust.mk  WASI-SDK.defs  Wasm.mk  generate_rust_unified_lib.py  mkromfsimg.sh  mksymtab.sh
(+938 files in other folders)
